# AustroSimulator

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ACKNOWLEDGE.md  Pipfile  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: python-package.yml
asm/: asm_lexer.py  assembler.py  memword.py
austro/: __init__.py  abstractdata.py  script.py  shared.py
austro/asm/: asm_lexer.py  assembler.py  memword.py
austro/simulator/: cpu.py  register.py
austro/ui/: codeeditor.py  cpumodels.py  datamodel.py  mainwindow.py  mainwindow.ui  models.py
austro/ui/html/: instructions.html
doc/: config.doxygen
docs/: assembly-ref.html  assembly-ref.md  cpu.md  index.md  requirements.txt  screenshot.md
docs/style/: assembly-ref.css
qml/: computer.qml
simulator/: __init__.py  cpu.py  cycle.py  register.py
tests/: test_assembler.py  test_cpu.py  test_cycle.py  test_memword.py
ui/: mainwindow.ui
ui_files/: mainwindow.ui
