[tool.poetry]
name = "austrosim"
version = "0.1.1.dev2"
description = "A CPU simulator resembling Intel 8086."
authors = ["Wagner Macedo <wagnerluis1982@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

packages = [
    { include = "austro", from = "." },
]

[tool.poetry.scripts]
austrosim = "austro.script:main"

[tool.poetry.dependencies]
python = "^3.9"
ply = "^3.11"
pyqt5 = "^5.15.11"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
